# varnaapi

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  __init__.py  mkdocs.yml  param.py  pyproject.toml  setup.py  varnaapi.py
docs/: annotation.md  config.md  drawing.md  index.md  reference.md  style.md  varna.bib  varna.md  varnaapi.md
docs/gallery/: Cartoon-like.ipynb  Module-drawing-with-hacked-option.ipynb
src/varnaapi/: __init__.py  config-settings-v1.yml  models.py  param.py  settings.py  varnaapi.py
